# vidz

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
back/: Dockerfile  pyproject.toml
back/app/: main.py
front/: Dockerfile  package.json  pnpm-lock.yaml
