[tool.poetry]
name = "vidz"
version = "0.1.0"
description = ""
authors = ["Don Nguyen <ndon55555@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
streamlink = "^6.3.1"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
