[tool.poetry]
name = "vidz"
version = "0.1.0"
description = ""
authors = ["Don Nguyen <ndon55555@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
streamlink = "^6.3.1"
loguru = "^0.7.2"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
ruff = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
